Switch to Java 21 for Docker build

--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -1,9 +1,11 @@
-FROM maven:3.8.6-eclipse-temurin-17 AS build
+# Use Java 21 Maven image for build
+FROM maven:3.9.4-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-FROM eclipse-temurin:17-jdk
+# Use Java 21 JDK image for running
+FROM eclipse-temurin:21-jdk
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
