Update DB config to use Render DATABASE_URL

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 # === DATABASE CONFIGURATION ===
-spring.datasource.url=jdbc:postgresql://localhost:5432/vantarides
-spring.datasource.name=vantarides
-spring.datasource.username=vantarides_appuser
-spring.datasource.password=vantarides
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === JWT SECURITY CONFIG ===
 jwt.header=Authorization
